# CMU_VLA

./: CLAUDE.md  README_JP.md  SETUP.md  launch_module.sh
ai_module/: setup_gemini.md
ai_module/src/cinaps_vlm/: CLEANUP_SUMMARY.md  CMakeLists.txt  README.md  __init__.py  package.xml  qa_node.py  requirements.txt  vision_detector.py  world_model_node.py
ai_module/src/cinaps_vlm/exploration/: __init__.py  manager.py
ai_module/src/cinaps_vlm/launch/: vision_detector.launch  world_model_llm_node.launch  world_model_node.launch
ai_module/src/cinaps_vlm/perception/: __init__.py  fusion.py  ovd.py  world_model.py
ai_module/src/cinaps_vlm/reasoning/: __init__.py  relations.py
ai_module/src/cinaps_vlm/scripts/: exploration_manager  llm_qa_node  qa_node  world_model_node
ai_module/src/gakuto_vlm/scripts/: inspect_semantic_data.py
docker/: Dockerfile  compose.yml  compose_gpu.yml
docs/: LocalLLM.md  blueprint.md  dataset_analysis_for_model_selection.md  function_calling.md  owlvit_finetuning_strategy.md  ros_topics.md  search_result_model.md  sensor_to_json_pipeline.md  world_model_schema.md
