<?xml version="1.0"?>
<package format="2">
  <name>cinaps_vlm</name>
  <version>0.0.1</version>
  <description>Adaptive world model + perception utilities for CMU VLA challenge.</description>

  <maintainer email="unknown@example.com">maintainer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <export/>
</package>
